feat(denomination): v2.5.65 — Sprint A P0.1: 7 stratégia teljes impl + 16 unit teszt
Sprint A P0.1 close-out: a DenominationOptimizationService dead-kód volt (no callers),
CUSTOM és BRANCH_SPECIFIC ágak csak greedy fallback-et adtak. Most mind a 7 stratégia
valós implementáció:

- **GREEDY**: legnagyobb címlettől, gyors
- **MIN_BANKNOTES**: ugyanaz mint GREEDY (nagy címleteket preferál)
- **MIN_TOTAL**: kicsi címleteket preferál (max darabszám)
- **DYNAMIC**: bounded knapsack DP (minimum darabszám, optimum)
- **MIN_COINS**: bankjegyeket preferál, érméket csak ha kell
- **CUSTOM**: priorityOrderJson alapján definiált sorrend (új!) — stripTrailingZeros
  normalizál a "1000.00" ↔ "1000" BigDecimal scale mismatch ellen
- **BRANCH_SPECIFIC**: készlet-aware (új!) — nagy stock-os címleteket preferál
  (készletkiegyenlítés)

Refaktor:
- Inner `Strategy` enum törölve, `OptimizationStrategy` (entity csomag) használata
  single source of truth
- Null guards (strategy, amount), negative amount IllegalArgumentException
- Zero amount → üres térkép (no-op short-circuit)
- DYNAMIC `BigDecimal.TEN.pow(maxScale)` negative-clamp (>=0) — stripTrailingZeros
  scale=-3 esetén ArithmeticException fix

Tesztek (16 PASS):
- 7 stratégia happy path
- Adversarial DYNAMIC: 23000 Ft, {10000×1, 5000×3, 2000×4}, NO 1000 → greedy elakad,
  DYNAMIC pontos (6 piece optimum)
- CUSTOM scale-mismatch: priorityJson "1000.00" ↔ stored "1000"
- Empty stock: minden stratégia üres térkép (warning, nem dob)
- Zero amount: üres térkép
- Null/negative amount + null strategy → IllegalArgumentException
- Készlethiány: warning, részleges eredmény

Self-review (CLAUDE.md C.23 mandate):
- Round 1 (SQL/Flyway+multi-tenant fókuszú general-purpose agent): 5 finding
  → mind javítva vagy TODO-comment-tel deferálva (P0.3 companyId audit)
- Round 2 (verify): mind a 5 finding feloldva, semmi új blokkoló → SAFE TO MERGE

TODO P0.3-ban: a `findByBranchAndCurrency` repo query nem szűr `company.id`-ra
(jelenleg controller-szin